--- a/examples/timers/web_root/index.html
+++ b/examples/timers/web_root/index.html
@@ -7,7 +7,7 @@
     <div style="height: 0.3em;">&nbsp;</div>
     <input id="message" type="text" placeholder="Type message" style="width: 20em;" /> 
     <button id="send">send message</button>
-    <div style="margin-top: 1em;">Event log:</div>
+   <!-- <div style="margin-top: 1em;">Event log:</div> -->
     <div id="log" style="background: #eee; height: 10em; padding: 0.5em;"><div>
   </body>
   <script>
@@ -20,7 +20,8 @@
       ws = new WebSocket(url.value);
       if (!ws) return;
       ws.onopen = function() { log.innerHTML += 'CONNECTION OPENED<br/>'; }
-      ws.onmessage = function(ev) { log.innerHTML += 'RECEIVED: ' + ev.data + '<br/>'; }
+      //ws.onmessage = function(ev) { log.innerHTML += 'RECEIVED: ' + ev.data + '<br/>'; }
+      ws.onmessage = function(ev) { log.innerHTML = ev.data+ '<br/>'; }
       ws.onerror = function(ev) { log.innerHTML += 'ERROR: ' + ev + '<br/>'; }
       ws.onclose = function() { log.innerHTML += 'CONNECTION CLOSED<br/>'; enable(false); ws = null; }
       enable(true);
